--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-	"private": true,
-	"name": "hawk-new-builder",
-	"version": "1.0.0",
-	"repository": "git@github.com:mmehdinasiri/hawk-new-builder.git",
-	"author": "mmehdinasiri <m.mehdi.nasiri@gmail.com>",
-	"license": "MIT",
-	"devDependencies": {
-		"@babel/core": "^7.16.7",
-		"@babel/preset-env": "^7.16.8",
-		"babel-loader": "^8.2.3",
-		"clean-webpack-plugin": "^4.0.0",
-		"css-loader": "^6.5.1",
-		"mini-css-extract-plugin": "^2.4.7",
-		"postcss": "^8.4.5",
-		"postcss-loader": "^6.2.1",
-		"postcss-preset-env": "^7.2.3",
-		"sass-loader": "^12.4.0",
-		"webpack": "^5.66.0",
-		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.7.3",
-		"webpack-remove-empty-scripts": "^0.7.2"
-	},
-	"scripts": {
-		"start": "webpack server",
-		"watch": "webpack watch",
-		"build": "webpack"
-	},
-	"dependencies": {
-		"sass": "^1.48.0"
-	}
+  "private": true,
+  "name": "hawk-new-builder",
+  "version": "1.0.0",
+  "repository": "git@github.com:mmehdinasiri/hawk-new-builder.git",
+  "author": "mmehdinasiri <m.mehdi.nasiri@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.3.1",
+    "mini-css-extract-plugin": "^2.4.7",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.2.3",
+    "sass-loader": "^12.4.0",
+    "terser-webpack-plugin": "^5.3.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-remove-empty-scripts": "^0.7.2"
+  },
+  "scripts": {
+    "start": "webpack server",
+    "watch": "webpack watch",
+    "build": "NODE_ENV=production webpack"
+  },
+  "dependencies": {
+    "sass": "^1.48.0"
+  }
 }
