--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.16.8",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.1",
     "mini-css-extract-plugin": "^2.4.7",
